--- a/prueba1.html
+++ b/prueba1.html
@@ -7,7 +7,7 @@
 
 <body>
 <p>1 .- va de nuevo.... uno/2/3/4/5</p>
-<p>2.- Aqui va la 2</p>
+<p>2.- Aqui va la $$cambio de numero a letra: DOS$$</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
