--- a/educacion.html
+++ b/educacion.html
@@ -15,6 +15,74 @@
   <li><a href="educacion.html">Educación</a></li>
   <li><a href="experiencia.html">Experiencia</a></li>
 </ul>
-<h2>Información Personal</h2>
+<h2>Educación</h2>
+<table width="100%" border="1" cellpadding="0" cellspacing="0">
+  <tr>
+    <td width="21%">Año</td>
+    <td width="33%">Institución</td>
+    <td width="21%">Lugar</td>
+    <td width="25%">¿Culminó?</td>
+  </tr>
+  <tr>
+    <td>1977-1978</td>
+    <td>Preparatoria Oxford</td>
+    <td>Bachillerato</td>
+    <td>Si</td>
+  </tr>
+  <tr>
+    <td>1978-1982</td>
+    <td>U A N L</td>
+    <td>San Nicolas</td>
+    <td>Si</td>
+  </tr>
+</table>
+<form autocomplete="on" name"Formulario evaluacion">
+  <fieldset>
+   	<legend>Agregar estudios</legend>
+    <p>
+      <label for="Año">Año</label>
+      <select>
+        <option>1983</option>
+        <option>1984</option>
+        <option>1985</option>
+        <option>1986</option>
+        <option>1987</option>
+        <option>1988</option>
+        <option>1989</option>
+        <option>1990</option>
+        <option>1991</option>
+        <option>1992</option>
+      </select>
+    </p>
+    <p>
+      <label for="Institución">Institición</label>
+      <input type"text">
+    </p>
+    <p>
+      <label for="Lugar">Lugar</label>
+      <input type"text">
+    </p>
+    <p>¿Culminó? 
+      <input type="radio" name="radio1" id="si" value="si">
+      <label for="si">Si</label>
+      <input type="radio" name="radio2" id="no" value="no">
+      <label for="no">No</label>
+    </p>
+    <p>
+      <input type="submit" name="enviar" id="enviar" value="Enviar">
+    </p>
+    
+  </fieldset>
+
+
+</form>
+<h5>&nbsp;</h5>
+  <h5>@Derechos reservados</h5>
+  <p><a href="ehrobles@gmail.com">ehrobles@gmail.com</a></p>
+  <p> <a href="facebook.com/ehrobles61">facebook.com/ehrobles61</a></p>
+  <p>San Nicolás de los Garza, N.L. México</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
 </body>
 </html>
