--- a/index.html
+++ b/index.html
@@ -17,6 +17,19 @@
     <li><a href="experiencia.html">Experiencia</a></li>
   </ul>
   <h2>Información Personal</h2>
+  <p><img src="imagenes/IMG-20161105-WA0019.jpeg" width="231" height="384"></p>
+  <p>Soy un entusiasta del internet, mi profesión es muy diferente, sin embargo me gusta y me apasiona, por eso estoy capacitándome en la cración de páginas web, pues no me quiero quedar solo en el entusiasmo, quiero saber hacerlo.</p>
+  <p>Los idiomas que hablo y escribo son:</p>
+  <ul>
+  	<li>Español</li>
+  	<li>Ingles</li>
+  </ul>
+  <h5>&nbsp;</h5>
+  <h5>@Derechos reservados</h5>
+  <p><a href="ehrobles@gmail.com">ehrobles@gmail.com</a></p>
+  <p> <a href="facebook.com/ehrobles61">facebook.com/ehrobles61</a></p>
+  <p>San Nicolás de los Garza, N.L. México</p>
+  <p>&nbsp;</p>
   
   
   </html>
