--- a/experiencia.html
+++ b/experiencia.html
@@ -15,6 +15,18 @@
   <li><a href="educacion.html">Educación</a></li>
   <li><a href="experiencia.html">Experiencia</a></li>
 </ul>
-<h2>Información Personal</h2>
+<h2>Experiencia</h2>
+<p>Mis habilidades y experiencias</p>
+<video src="imagenes/video01.mp4" controls width="500" height="500"></video>
+<p>Hobbies y actividades recreacionales</p>
+<audio src="imagenes/audio1.mp3" controls></audio>
+
+
+<h5>&nbsp;</h5>
+  <h5>@Derechos reservados</h5>
+  <p><a href="ehrobles@gmail.com">ehrobles@gmail.com</a></p>
+  <p> <a href="facebook.com/ehrobles61">facebook.com/ehrobles61</a></p>
+  <p>San Nicolás de los Garza, N.L. México</p>
+
 </body>
 </html>
